--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ POSTGRES_PASSWORD=start
 POSTGRES_PORT=54322
 POSTGRES_HOST=localhost
 
+TEST_DB_URL=postgresql+asyncpg://postgres:start@host.docker.internal:54322/contacts_app
 DB_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 JWT_SECRET=your_secret_key
 JWT_ALGORITHM=HS256
