--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "pydantic-settings (>=2.8.1,<3.0.0)",
     "fastapi-mail (>=1.4.2,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "redis[asyncio] (>=5.2.1,<6.0.0)",
 ]
 
 
@@ -30,4 +32,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.2.3"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
+httpx = "^0.28.1"
+pytest-cov = "^6.1.1"
 
